--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <a href="https://drive.google.com/file/d/1ameX7tU5rDNNT75lodmBDiFIP1wmTgCv/view?usp=drive_link" target="_blank">CV</a>
         <a href="mailto:tuncaykhalisov@gmail.com" target="_blank">tuncaykhalisov@gmail.com</a>
-        <span id="my-span"><a href="https://instagram.com/tun__cay211/">Instagram</a> / <a href="https://github.com/kira-khalay" target="_blank">Github</a></span>
+        <span id="my-span"><a href="https://instagram.com/tun__cay211/">Instagram</a> / <a href="https://github.com/tuncay-khalisov" target="_blank">Github</a></span>
     </header>
     <main>
         <i>Tuncay Khalisov 👋</i>
